<resources>
    <string name="app_name">Vacinacao</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="fragment_lista_ficha">Lista Ficha</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vacina">Vacina:</string>
    <string name="biontech">BioNTech</string>
    <string name="data">Data:</string>
    <string name="paciente">Paciente:</string>
    <string name="hora">Hora:</string>
    <string name="efeitos">Efeitos:</string>
    <string name="ficha_vacina_o">Ficha Vacinação</string>
    <string name="nome_paciente">Nome Paciente</string>
    <string name="Data">Data</string>
    <string name="Hora">Hora</string>
    <string name="Efeitos">Efeitos</string>
    <string name="Vacina">Vacina</string>
    <string name="guardar">guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="nome_vacina">Nome Vacina</string>

    <string name="alterar_ficha">alterar_ficha</string>
    <string name="versao">LFicha v. 1.0</string>
    <string name="action_setings">action_settings</string>
    <string name="elimina_ficha_fragment_label">Eliminar Ficha?</string>
    <string name="edita_ficha_fragment_label">Editar Ficha</string>
    <string name="nova_ficha_fragment_label">Nova Ficha</string>
    <string name="edita_ficha">edita_ficha</string>
    <string name="eliminar_ficha">eliminar_ficha</string>
    <string name="cancelar_ficha">cancelar_ficha</string>
    <string name="nova_ficha">nova_ficha</string>

    <string name="preencha_nome">Preencha o Nome do Paciente</string>
    <string name="preencha_data">Preencha a Data</string>
    <string name="preencha_hora">Preencha a Hora</string>
    <string name="ficha_guardada_sucesso">Ficha Guardada Com Suceso</string>
    <string name="erro_inserir_ficha">Erro ao inserir Ficha</string>
    <string name="preencha_efeitos">Preencha os Efeitos</string>
    <string name="id_paciente">ID Paciente</string>
    <string name="textview">TextView</string>
    <string name="erro_eliminar_ficha">Erro ao eliminar Ficha</string>
    <string name="ficha_eliminada_sucesso">Eliminado Com sucesso</string>
    <string name="ficha_paciente">Ficha_Paciente</string>
    <string name="ficha_tecnica_covid">Ficha Tecnica Covid</string>
    <string name="erro_alterar_ficha">Erro alterar ficha</string>
    <string name="ficha_guardado_sucesso">Guardada com sucesso</string>
    <string name="eliminar_paciente">eliminar_paciente</string>
    <string name="alterar_paciente">alterar_paciente</string>
    <string name="novo_paciente">novo_paciente</string>
    <string name="nome_pacientE">Nome Paciente:</string>
    <string name="morada">Morada</string>
    <string name="contacto">Contacto</string>
    <string name="numero_utente">Numero Utente</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="gest_o_pacientes">Gestão Pacientes</string>
    <string name="fragment_lista_paciente">Lista Pacientes</string>
    <string name="fragment_novo_paciente">Novo Paciente</string>
    <string name="fragment_edita_paciente">Edita Paciente</string>
    <string name="fragment_elimina_paciente">Elimina Paciente</string>
    <string name="paciente_guardado_sucesso">Paciente Guardado com Sucesso</string>
    <string name="erro_inserir_paciente">Erro ao Inserir Paciente</string>
    <string name="preencha_morada">Preencha Morada</string>
    <string name="preencha_Contacto">Preencha Contacto</string>
    <string name="preencha_Utente">Preencha Numero Utente</string>
    <string name="preencha_altura">Preencha Altura</string>
    <string name="preencha_peso">Preencha Peso</string>
    <string name="preencha_datanascimento">Preencha Data Nascimento</string>
    <string name="erro_eliminar_paciente">Erro ao elminar Paciente</string>
    <string name="paciente_eliminado_sucesso">Paciente eliminado com sucesso</string>
    <string name="erro_alterar_paciente">Erro ao alterar paciente</string>
    <string name="nova_vacina">nova_vacina</string>
    <string name="fragment_nova_vacina">nova_vacina</string>
    <string name="fragment_lista_vacina">Lista Vacinas</string>
    <string name="preencha_fabricante">Preencha Fabricante</string>
    <string name="preencha_Validade">Preencha Validade</string>
    <string name="preencha_dose">Preencha Dose</string>
    <string name="erro_inserir_vacina">Erro inserir Vacina</string>
    <string name="vacina_guardado_sucesso">Vacina Guardada com Sucesso</string>
    <string name="alterar_vacina">alterar_vacina</string>
    <string name="eliminar_vacina">Eliminar Vacina</string>
</resources>