<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewFicha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/ficha_vacina_o"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewNomePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paciente" />

    <TextView
        android:id="@+id/textViewPaciente"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:gravity="center"
        tools:text="Joao Fernando" />

    <TextView
        android:id="@+id/textViewNomeVacina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vacina" />

    <TextView
        android:id="@+id/textViewVacina"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/biontech" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:gravity="center"
        tools:text="16/02/2022" />

    <TextView
        android:id="@+id/textViewHora1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:gravity="center"
        tools:text="17:45PM" />

    <TextView
        android:id="@+id/textViewEfect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/efeitos" />

    <TextView
        android:id="@+id/textViewEfeitos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:gravity="center"
        tools:text="Paciente sentiu dor de cabeça , dor de corpo , febre de 38ºC" />

</LinearLayout>