<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.vacinacao.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_ListaFichaFragment"
            app:destination="@id/listaFichaFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ListaPacienteFragment"
            app:destination="@id/listaPacienteFragment" />

    </fragment>
    <fragment
        android:id="@+id/listaFichaFragment"
        android:name="com.example.vacinacao.ListaFichaFragment"
        android:label="@string/fragment_lista_ficha"
        tools:layout="@layout/fragment_lista_ficha">

        <action
            android:id="@+id/action_listaFichaFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_listaFichaFragment_to_editaFichaFragment"
            app:destination="@id/editaFichaFragment" />
        <action
            android:id="@+id/action_listaFichaFragment_to_eliminaFichaFragment"
            app:destination="@id/eliminaFichaFragment" />
        <action
            android:id="@+id/action_listaFichaFragment_to_novaFichaFragment"
            app:destination="@id/novaFichaFragment" />
    </fragment>

    <fragment
        android:id="@+id/novaFichaFragment"
        android:name="com.example.vacinacao.NovaFichaFragment"
        android:label="@string/nova_ficha_fragment_label"
        tools:layout="@layout/fragment_nova_ficha">

        <action
            android:id="@+id/action_NovaFichaFragment_to_ListaFichaFragment"
            app:destination="@id/listaFichaFragment" />
    </fragment>

    <fragment
        android:id="@+id/editaFichaFragment"
        android:name="com.example.vacinacao.EditaFichaFragment"
        android:label="@string/edita_ficha_fragment_label"
        tools:layout="@layout/fragment_edita_ficha">
        <action
            android:id="@+id/action_editaFichaFragment_to_listaFichaFragment"
            app:destination="@id/listaFichaFragment" />
    </fragment>

    <fragment
        android:id="@+id/eliminaFichaFragment"
        android:name="com.example.vacinacao.EliminaFichaFragment"
        android:label="@string/elimina_ficha_fragment_label"
        tools:layout="@layout/fragment_elimina_ficha" >
        <action
            android:id="@+id/action_eliminaFichaFragment_to_listaFichaFragment"
            app:destination="@id/listaFichaFragment" />
    </fragment>


    <fragment
        android:id="@+id/listaPacienteFragment"
        android:name="com.example.vacinacao.ListaPacienteFragment"
        android:label="@string/fragment_lista_paciente"
        tools:layout="@layout/fragment_lista_paciente">
    </fragment>

    <fragment
        android:id="@+id/novoPacienteFragment"
        android:name="com.example.vacinacao.NovoPacienteFragment"
        android:label="@string/fragment_novo_paciente"
        tools:layout="@layout/fragment_novo_paciente">
    </fragment>

    <fragment
        android:id="@+id/editaPacienteFragment"
        android:name="com.example.vacinacao.EditaPacienteFragment"
        android:label="@string/fragment_edita_paciente"
        tools:layout="@layout/fragment_edita_paciente">
    </fragment>

    <fragment
        android:id="@+id/eliminaPacienteFragment"
        android:name="com.example.vacinacao.EliminaPacienteFragment"
        android:label="@string/fragment_elimina_paciente"
        tools:layout="@layout/fragment_elimina_paciente">
    </fragment>

</navigation>