<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_paciente"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNomePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="Joao Nando" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/morada"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="Av Joao Marques" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="phone"
        tools:text="987987987" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_utente"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUtent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        tools:text="123456789" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        tools:text="160" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        tools:text="69" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_nascimento"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDataNasciment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="date"
        tools:text="17/07/2021" />
</LinearLayout>